# literature-review-agent

./: .env.example  .gitignore  README.md  pyproject.toml  research.py  test_e2e.py
docs/superpowers/specs/: 2026-05-23-academic-research-agent-design.md
prompts/: consistency_check.txt  critique_outline.txt  detect_gaps.txt  evaluate_saturation.txt  extract_claims.txt  generate_outline.txt  plan_queries_broad.txt  plan_queries_targeted.txt  rate_severity.txt  revise_outline.txt  translate_to_chinese.txt  write_chapter.txt
src/agent/: graph.py  routing.py  state.py
src/cli/: app.py  display.py  progress.py
src/config/: constants.py  settings.py
src/knowledge/: map.py  models.py  provenance.py
src/llm/: client.py  prompts.py
src/nodes/: detect_gaps.py  evaluate_saturation.py  generate_outline.py  plan_queries.py  read.py  search.py  update_knowledge_map.py  write_report.py
src/pdf/: cache.py  docling_parser.py  downloader.py  marker_parser.py  parser.py
src/report/: chapters.py  formatter.py  outline.py  stitch.py
src/search/: arxiv.py  engine.py  models.py  semantic_scholar.py
src/utils/: async_utils.py  checkpoints.py  dedup.py  logging.py  retry.py  text_selector.py
tests/: conftest.py
tests/unit/: test_agent_routing.py  test_knowledge_map.py  test_knowledge_models.py  test_llm.py  test_provenance.py  test_report_formatter.py  test_report_stitch.py  test_search_clients.py  test_text_selector.py  test_utils_dedup.py  test_utils_retry.py
